--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         <div class="container">
             <div class="guarantee-content">
                 <div class="guarantee-image">
-                    <img src="images/guarantee-badge-transparent.png" alt="Garantia de 7 dias" class="guarantee-img">
+                    <img src="images/guarantee-badge.png" alt="Garantia de 7 dias" class="guarantee-img">
                 </div>
                 <div class="guarantee-text">
                     <h2>Garantia Incondicional de 7 Dias</h2>
