--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
             </div>
             
             <div class="footer-legal">
+                </div>
                 <p><strong>Aviso Legal:</strong> Este produto é comercializado com base na Lei 8.078/90 (Código de Defesa do Consumidor). O conteúdo do produto é de responsabilidade do produtor. Vendas realizadas pela plataforma Kiwify.</p>
                 </div>
                 <p><strong>Termos de Uso:</strong> Ao adquirir este produto, você concorda com nossos termos de uso. O material é destinado exclusivamente para uso pessoal e não pode ser redistribuído.</p>
